# FFmpegPratice

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/decode/: decode_audio.cpp  decode_audio.h  decode_video.cpp  decode_video.h  demux_decode.cpp  demux_decode.h  demuxing.cpp  demuxing.h  encodeAudio.cpp  encodeAudio.h  encodeVideo.cpp  encodeVideo.h  metadata.cpp  metadata.h  muxing.cpp  muxing.h  remuxing.cpp  remuxing.h  resample.cpp  resample.h  scale_video.cpp  scale_video.h
app/src/main/cpp/jni/: com_xiongliang_ffmpegpratice_DecodeAudio.h  com_xiongliang_ffmpegpratice_DecodeVideo.cpp  com_xiongliang_ffmpegpratice_DecodeVideo.h  com_xiongliang_ffmpegpratice_DemuxAndDecode.cpp  com_xiongliang_ffmpegpratice_DemuxAndDecode.h  com_xiongliang_ffmpegpratice_Demuxing.cpp  com_xiongliang_ffmpegpratice_Demuxing.h  com_xiongliang_ffmpegpratice_EncodeAudio.cpp  com_xiongliang_ffmpegpratice_EncodeAudio.h  com_xiongliang_ffmpegpratice_EncodeVideo.cpp  com_xiongliang_ffmpegpratice_EncodeVideo.h  com_xiongliang_ffmpegpratice_Metadata.cpp  com_xiongliang_ffmpegpratice_Metadata.h  com_xiongliang_ffmpegpratice_Muxing.cpp  com_xiongliang_ffmpegpratice_Muxing.h  com_xiongliang_ffmpegpratice_Remuxing.cpp  com_xiongliang_ffmpegpratice_Remuxing.h  com_xiongliang_ffmpegpratice_Resample.cpp  com_xiongliang_ffmpegpratice_Resample.h  com_xiongliang_ffmpegpratice_ScaleVideo.cpp  com_xiongliang_ffmpegpratice_ScaleVideo.h
app/src/main/java/com/xiongliang/ffmpegpratice/: DecodeAudio.java  DecodeVideo.java  DemuxAndDecode.java  Demuxing.java  EncodeAudio.java  EncodeVideo.java  MainActivity.java  Metadata.java  Muxing.java  Remuxing.java  Resample.java  ScaleVideo.java
app/src/main/jni/: com_xiongliang_ffmpegpratice_DecodeAudio.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
